NXP-22107: improve computation workmanager impl